infra/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: manuhdez/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - port: 3002
      targetPort: 3002
