infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: manuhdez/event-bus
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - port: 4000
      targetPort: 4000
