infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: manuhdez/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - port: 3004
      targetPort: 3004
