infra/k8s/posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: manuhdez/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 3001
      targetPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 3001
      targetPort: 3001
