infra/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: manuhdez/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - port: 3003
      targetPort: 3003
