infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-clusterip
              servicePort: 3001
          - path: /posts
            backend:
              serviceName: query-clusterip
              servicePort: 3003
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-clusterip
              servicePort: 3002
          - path: /?(.*)
            backend:
              serviceName: client-clusterip
              servicePort: 3000
